# cyrial_Ingl

./: .gitignore  Cargo.toml
python/: create_collection.ipynb  instruction.py  mint_nft.ipynb  state.py  upload_data_arweave.ipynb  uploaded_images.json
src/: error.rs  instruction.rs  lib.rs  nfts.rs  processor.rs  state.rs
