[package]
name = "ingl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.11.3"
borsh = "0.9.3"
spl-token = "3.3.0"
borsh-derive = "0.9.3"
spl-associated-token-account = "1.0.5"
mpl-token-metadata = { version = "1.3.2", features = ["no-entrypoint"]}
thiserror = "1.0.31"
num-derive = "0.3"
num-traits = "0.2"



[lib]
crate-type = ["cdylib", "lib"]

